doc - 去掉无关内容

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "itheima-admin",
+  "name": "ihrm-admin",
   "version": "1.0.0",
-  "description": "黑马Admin 管理系统基础模板",
-  "author": "taoshiwei <taoshiwei@itcast.cn>",
+  "description": "管理系统基础模板",
+  "author": "",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
